Horizontal scroll fix

--- a/public/dev/less/desktop/flats.less
+++ b/public/dev/less/desktop/flats.less
@@ -139,6 +139,7 @@
     flex-shrink: 0;
     width: 100%;
     max-width: 330px;
+    box-sizing: border-box;
     border-left: 1px solid rgba(0, 0, 0, 0.08);
   }
 
